Fix mobile alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,43 +127,33 @@ footer svg:hover path {
 .hero {
   text-align: center;
   display: flex;
-  flex-direction: row-reverse;
-  /* outline: 2px solid blue; */
-  /* min-height: 120vw; */
-  /* outline: 2px solid red; */
+  flex-direction: column;
+  align-items: center;
   min-height: 85vw;
-  /* max-height: 100%; */
-  margin-top: 60vw;
+}
+
+.hero * {
+  margin-bottom: 10px;
 }
 
 .hero div {
   /* outline: 2px solid orange; */
 }
 
-.hero__image img {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  translate: -50%;
-  z-index: -1;
+/* needed for ASCII effect */
+#image-container {
+  /* border: 2px solid blue; */
 }
 
+/* needed for ASCII effect */
 #profilePic {
-  position: absolute;
-  top: 0;
-  margin-top: 160px;
-  left: 50%;
-  translate: -50%;
-  z-index: -1;
-}
-
-.hero__image {
-  width: 50px;
+  display: block;
+  
 }
 
 .hero__text {
   /* Flex item */
-  margin-top: 10%;
+  /* margin-top: 10%; */
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -183,6 +173,7 @@ footer svg:hover path {
 }
 
 .hero__description {
+  margin-bottom: 20px;
 }
 
 .hero__contact {
@@ -508,15 +499,6 @@ footer svg:hover path {
   object-fit: contain;
 }
 
-#image-container {
-  /* border: 2px solid blue; */
-}
-
-#profilePic {
-  /* border: 2px solid red; */
-  /* max-width: 80vw; */
-}
-
 .contact__input {
   height: 100%;
   width: 100%;
@@ -788,18 +770,24 @@ section {
     /* flex: 1 1; */
   }
 
-  .hero__image img {
-    /* width: 45%; */
+  /* .hero__image img {
     translate: 0;
     left: auto;
     right: 0;
-    /* outline: 2px solid pink; */
-  }
+  } */
 
+  /* .hero__image img {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    translate: -50%;
+    z-index: -1;
+  } */
+
+  /* Adjusts ASCII image properties */
   #profilePic {
     position: absolute;
     top: 0;
-    translate: 0;
     left: auto;
     right: 0;
     z-index: -1;
